Simplify and modernize README: remove legacy fluff, add clear CLI table and quick start